# code-migration-assistant

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SKILL.md  _test_pii_perf.py  config.defaults.yaml  diagnose_syntax.py  docker-compose.yml  markers.txt  mcp.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test_output.txt  test_output_2.txt
.github/workflows/: ci.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  FEATURES.md  INSTALLATION.md  PLUGIN_GUIDE.md  PROJECT_OVERVIEW.md  USER_GUIDE.md
docs/security/: SECURITY.md
scripts/: cleanup-secrets.sh  pre-commit-security.sh  security-scan.sh  setup-git-hooks.sh
skills/code-migration/: .env.example  CONTRIBUTING.md  README.md  requirements.txt
skills/code-migration/config/: security_config.yaml
skills/code-migration/scripts/: migrate.py
skills/code-migration/tests/: __init__.py  pytest.ini  test_migrators.py  test_security.py
src/code_migration/: cli.py  config.py  mcp_server.py  registry.py  telemetry.py  web.py
src/code_migration/analyzers/: base.py  python_migrator.py  react_migrator.py
src/code_migration/api/: app.py  auth.py  (+3 more)
src/code_migration_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py
tests/compliance/: test_audit_reporter.py  test_pii_detector.py
tests/integration/: test_full_migration.py
tests/performance/: test_large_codebase.py
tests/security/: test_input_validation.py  test_path_sanitizer.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css
(+74 files in other folders)
