[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-migration-assistant"
version = "0.1.0"
description = "Secure, intelligent code migration assistant for AI agents"
readme = "README.md"
authors = [{ name = "Open Source Contributor", email = "contributor@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "typer[all]",
    "rich",
    "pyyaml",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "bandit",
    "pre-commit"
]

[tool.pytest.ini_options]
testpaths = ["skills/code-migration/tests"]
python_files = ["test_*.py"]

[tool.isort]
profile = "black"
